--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
     "mongoose": "^8.5.3",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
