--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
