--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "vite-plugin-mkcert": "^1.17.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
